# dm2023

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-project-dev.txt  requirements-project.txt  requirements.txt
labwork/: 01.preprocessing.py  02.review.length.py  03.review.length.clustering.py  04.review.length.kmeans.py  05.review.length.meanshift.py  README.md
notebooks/: 01_preprocessing.ipynb  02.review.length.ipynb  03.review.length.clustering.ipynb  04.review.length.kmeans.ipynb  05.review.length.meanshift.ipynb
project/: README.md  experiment.sh  segment.py
project/core/clustering/: MeanShiftClustering.py  __init__.py
project/core/dataclasses/: DataVector.py  Point.py  __init__.py
project/core/dataobject/: Point.py  __init__.py
project/core/kernel/: Kernel.py  __init__.py
project/core/utils/: __init__.py
