[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-mining"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"pandas>=1.4.3,<2",
	"numpy==1.24.3",
	"scikit-learn==1.2.2",
	"nltk==3.6.5",
	"pip-tools==6.13.0",
	"ipykernel==6.22.0"
]

[project.optional-dependencies]
dev = [
	"black==23.3.0",
	"pytest>=7.3.1",
	"pytest-cov>=4.0.0",
	"ruff>=0.0.261",
	"watchdog>=2.1.9",
]
