[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-mining"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy==1.24.3",
	"matplotlib==3.7.1",
	"seaborn==0.12.2",
]

[project.optional-dependencies]

labwork = [
	"ipykernel==6.22.0",
	"scikit-learn==1.2.2",
	"pandas>=1.4.3,<2",
	"nltk==3.6.5",
]

project = [
	"imageio==2.28.1",
	"tqdm==4.65.0",
]
dev = [
	"black==23.3.0",
	"tomli==2.0.1",
	"pytest==7.3.1",
	"exceptiongroup==1.1.1",
	"pytest-cov==4.0.0",
	"ruff==0.0.261",
]
